@@ -468,6 +468,15 @@ AC_CHECK_HEADERS(syslog.h)
 AC_CHECK_FUNCS(syslog)
 
 #--------------------------------------------------------------------
+# Check for pthread.h (only when building on Darwin machines)
+#--------------------------------------------------------------------
+AC_CHECK_HEADERS(pthread.h)
+if test $ac_cv_header_pthread_h = yes ; then
+  HAVE_PTHREAD_H=yes
+  AC_DEFINE(HAVE_PTHREAD_H)
+fi
+
+#--------------------------------------------------------------------
 # This function needed by StdioStream.m
 #--------------------------------------------------------------------
 AC_CHECK_FUNCS(vsprintf vasprintf)
