@@ -1,3 +1,12 @@
+2001-07-09  Adam Fedor  <fedor@gnu.org>
+
+	* configure.in: Check for pthread.h - for compiling on Darwin.
+	* Source/GNUmakefile: Compile thr-pthread.m conditionally.
+	* Source/thr-pthread.m: New file.
+
+	* Source/null-load.h (__objc_dynamic_get_symbol_path): New def.
+	* Source/objc-load.m: Use NeXT load methods on Darwin.
+
 2001-07-07  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSUser.m: NSSearchPathForDirectoriesInDomains() Set up
